renamed infrastructure to shared

--- a/src/tests/IntegrationTests/IntegrationTests.csproj
+++ b/src/tests/IntegrationTests/IntegrationTests.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\tests\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\..\tests\Shared\Shared.csproj" />
     <ProjectReference Include="..\..\SafeOrbit\SafeOrbit.csproj" />
   </ItemGroup>
 
