--- a/src/tests/IntegrationTests.NetFramework/IntegrationTests.NetFramework.csproj
+++ b/src/tests/IntegrationTests.NetFramework/IntegrationTests.NetFramework.csproj
@@ -44,8 +44,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="Infrastructure">
-      <HintPath>..\Infrastructure\bin\$(Configuration)\net46\Infrastructure.dll</HintPath>
+    <Reference Include="Shared">
+      <HintPath>..\Shared\bin\$(Configuration)\net47\Infrastructure.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
