--- a/src/tests/IntegrationTests/IntegrationTests.csproj
+++ b/src/tests/IntegrationTests/IntegrationTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyName>SafeOrbit.IntegrationTests</AssemblyName>
+    <PackageId>SafeOrbit.IntegrationTests</PackageId>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
