fixed RandomComparisonApp key path

--- a/src/tests/apps/RandomComparisonApp/RandomComparisonApp.csproj
+++ b/src/tests/apps/RandomComparisonApp/RandomComparisonApp.csproj
@@ -15,7 +15,7 @@
     <ProjectReference Include="..\..\..\SafeOrbit\SafeOrbit.csproj" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <AssemblyOriginatorKeyFile>../../../docs/signature_keys/private/RandomComparisonApp-key.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>../../../../docs/signature_keys/private/RandomComparisonApp-key.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
   </PropertyGroup>
