--- a/src/SafeOrbit/SafeOrbit.csproj
+++ b/src/SafeOrbit/SafeOrbit.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <None Include="..\..\LICENSE" Link="LICENSE" Pack="true" PackagePath="" />
     <Content Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="" />
+    <None Include="..\..\docs\img\logo\logo_60x60.png" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' OR  '$(TargetFramework)' == 'netstandard1.6.1'">
@@ -94,7 +95,7 @@
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
     <PackageReleaseNotes>https://github.com/undergroundwires/SafeOrbit/releases/tag/0.3.0</PackageReleaseNotes>
     <PackageTags>.net security protect safeorbit hash safestring saferandom safebytes protection injection detection asynchronous encryption</PackageTags>
-    <PackageIconUrl>https://raw.githubusercontent.com/undergroundwires/SafeOrbit/master/docs/img/logo/logo_60x60.png</PackageIconUrl>
+    <PackageIconUrl>logo_60x60.png</PackageIconUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/undergroundwires/SafeOrbit</RepositoryUrl>
     <!-- /////////////////////////// NUGET END /////////////////////////// -->
