tests for MemoryProtectedBytes

--- a/src/tests/IntegrationTests.NetFramework/IntegrationTests.NetFramework.csproj
+++ b/src/tests/IntegrationTests.NetFramework/IntegrationTests.NetFramework.csproj
@@ -88,6 +88,9 @@
     <Compile Include="..\IntegrationTests\Vectors\BlowfishVectors.cs">
       <Link>Vectors\BlowfishVectors.cs</Link>
     </Compile>
+    <Compile Include="..\IntegrationTests\Memory\SafeBytes\SafeByte\DataProtection\MemoryProtectedBytesTests.cs">
+      <Link>Memory\SafeBytes\SafeByte\DataProtection\MemoryProtectedBytesTests.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
