--- a/src/tests/UnitTests.NetFramework/UnitTests.NetFramework.csproj
+++ b/src/tests/UnitTests.NetFramework/UnitTests.NetFramework.csproj
@@ -71,8 +71,8 @@
     <Compile Include="..\UnitTests\Internal\Stubs.cs">
       <Link>Internal\Stubs.cs</Link>
     </Compile>
-    <Compile Include="..\UnitTests\Memory\SafeBytes\SafeByte\DataProtection\MemoryProtectorTests.cs">
-      <Link>Memory\SafeBytes\SafeByte\DataProtection\MemoryProtectorTests.cs</Link>
+    <Compile Include="..\UnitTests\Memory\SafeBytes\SafeByte\DataProtection\Protector\MemoryProtectorTests.cs">
+      <Link>Memory\SafeBytes\SafeByte\DataProtection\Protector\MemoryProtectorTests.cs</Link>
     </Compile>
     <Compile Include="..\UnitTests\Memory\SafeMemoryStreamTests.cs">
       <Link>Memory\SafeMemoryStreamTests.cs</Link>
