--- a/src/tests/Shared/Shared.csproj
+++ b/src/tests/Shared/Shared.csproj
@@ -4,8 +4,6 @@
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <PackageId>SafeOrbit.Shared</PackageId>
     <LangVersion>latest</LangVersion>
-    <SignAssembly>true</SignAssembly>
-    <DelaySign>false</DelaySign>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,8 +17,7 @@
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <AssemblyOriginatorKeyFile>../../../docs/signature_keys/private/Release-key.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>../../../docs/key/Release-key.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
-    <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
   </PropertyGroup>
 </Project>
