--- a/src/tests/apps/RandomComparisonApp/RandomComparisonApp.csproj
+++ b/src/tests/apps/RandomComparisonApp/RandomComparisonApp.csproj
@@ -5,7 +5,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="BouncyCastle">
+    <PackageReference Include="BouncyCastle.NetCore">
       <Version>1.8.5</Version>
     </PackageReference>
     <PackageReference Include="SharpCompress">
