--- a/src/tests/apps/RandomComparisonApp/RandomComparisonApp.csproj
+++ b/src/tests/apps/RandomComparisonApp/RandomComparisonApp.csproj
@@ -5,12 +5,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="BouncyCastle.NetCore">
-      <Version>1.8.5</Version>
-    </PackageReference>
-    <PackageReference Include="SharpCompress">
-      <Version>0.24.0</Version>
-    </PackageReference>
+    <PackageReference Include="BouncyCastle.NetCore" Version="1.8.5" />
+    <PackageReference Include="SharpCompress" Version="0.24.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\SafeOrbit\SafeOrbit.csproj" />
