--- a/src/SafeOrbit/SafeOrbit.csproj
+++ b/src/SafeOrbit/SafeOrbit.csproj
@@ -6,12 +6,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.6' ">$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
-    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
+    <AssemblyTitle>SafeOrbit</AssemblyTitle>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
@@ -54,7 +49,7 @@
   <ItemGroup>
     <None Include="..\..\LICENSE" Link="LICENSE" Pack="true" PackagePath="" />
     <Content Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="" />
-    <None Include="..\..\docs\img\logo\logo_60x60.png" Pack="true" PackagePath="\"/>
+    <None Include="..\..\docs\img\logo\logo_60x60.png" Pack="true" PackagePath="\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' OR  '$(TargetFramework)' == 'netstandard1.6.1'">
     <DefineConstants>$(DefineConstants);NETSTANDARD1_6</DefineConstants>
@@ -96,6 +91,6 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/undergroundwires/SafeOrbit</RepositoryUrl>
     <!-- /////////////////////////// NUGET END /////////////////////////// -->
-  
-</PropertyGroup>
+
+  </PropertyGroup>
 </Project>
