implemented padding in blowfish

--- a/src/tests/PerformanceTests/PerformanceTests.csproj
+++ b/src/tests/PerformanceTests/PerformanceTests.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <AssemblyName>SafeOrbit.PerformanceTests</AssemblyName>
     <TargetFrameworks>net45;netcoreapp1.1;netcoreapp2.1;netcoreapp2.2;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+    <RootNamespace>SafeOrbit</RootNamespace>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
